BUGFIX: Fix resizable icon overlapping maximize button when minimized

--- a/src/scss/components/_state.scss
+++ b/src/scss/components/_state.scss
@@ -12,7 +12,9 @@
     box-shadow: none;
     width: auto;
     bottom: 0;
-
+    &.#{$wrapper}-resizable {
+      resize: none;
+    }
     .#{$wrapper}-content {
       display:none;
     }
